# helios-launcher

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: basedir.h  help.h  launcher.h  mainwindow.h
res/: heliosGui.rc  resources.qrc
res/qt/etc/: qt.conf
src/: basedir.cpp  help.cpp  launcher.cpp  main.cpp  mainwindow.cpp
ui/: basedir.ui  help.ui  launcher.ui  mainwindow.ui
util/: deploy-lin64.sh  deploy-win64.bat  release-lin64-deb.sh  release-win64.bat
util/win/: getExePath.ps1  packInstaller.iss
